# nmos-sender-receiver-framework

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  spec.yml
.github/workflows/: cmake-ubuntu.yml
.render/: _config.yml
cpp/: .clang-format  CMakeLists.txt
cpp/config/cmake/: CompilerWarnings.cmake
cpp/demos/: CMakeLists.txt
cpp/demos/config/: nmos_plugin_node_config.json  nmos_plugin_node_config_receiver.json  nmos_plugin_node_config_sender.json
cpp/demos/gst-sender/: CMakeLists.txt  main.cpp
cpp/demos/nmos-cpp-node/: CMakeLists.txt  config.json  main.cpp  node_implementation.cpp  node_implementation.h
cpp/demos/ossrf-nmos-api/: CMakeLists.txt  main.cpp
cpp/demos/ossrf-nmos-api/config/: nmos_config.json  nmos_config2.json  nmos_receiver_config.json  nmos_sender_config.json
cpp/libs/: CMakeLists.txt
cpp/libs/bisect_expected/: CMakeLists.txt
cpp/libs/bisect_expected/lib/: CMakeLists.txt
cpp/libs/bisect_expected/lib/include/bisect/: expected.h  fmt.h
cpp/libs/bisect_expected/lib/include/bisect/expected/: helpers.h  macros.h  match.h
cpp/libs/bisect_expected/lib/src/: expected.cpp
cpp/libs/bisect_expected/tests/: CMakeLists.txt
cpp/libs/bisect_expected/tests/expected/: test_expected.cpp  test_expected_macros.cpp
cpp/libs/bisect_gst/lib/: CMakeLists.txt
cpp/libs/bisect_gst/lib/include/bisect/: initializer.h  pipeline.h
cpp/libs/bisect_gst/lib/src/: initializer.cpp  pipeline.cpp
cpp/libs/bisect_json/: CMakeLists.txt  LICENSE.txt
cpp/libs/bisect_json/lib/: CMakeLists.txt
cpp/libs/bisect_json/lib/include/bisect/: json.h
cpp/libs/bisect_json/lib/include/bisect/json/: json.h
cpp/libs/bisect_json/lib/src/: json.cpp
cpp/libs/bisect_json/tests/: CMakeLists.txt  test_parse.cpp
cpp/libs/bisect_nmoscpp/lib/: CMakeLists.txt
cpp/libs/bisect_nmoscpp/lib/include/bisect/nmoscpp/: base_nmos_controller.h  configuration.h  logger.h  nmos_controller.h  nmos_event_handler.h
cpp/libs/bisect_nmoscpp/lib/include/bisect/nmoscpp/detail/: expected.h  internal.h
cpp/libs/bisect_nmoscpp/lib/src/: base_nmos_controller.cpp  logger.cpp  nmos_controller.cpp  utils.cpp  utils.h
cpp/libs/bisect_sdp/lib/: CMakeLists.txt
cpp/libs/bisect_sdp/lib/include/bisect/: sdp.h
cpp/libs/bisect_sdp/lib/include/bisect/sdp/: builder.h  clocks.h  media_types.h  reader.h  settings.h
cpp/libs/bisect_sdp/lib/src/: builder.cpp  clocks.cpp  reader.cpp
cpp/libs/gst_nmos_audio_receiver_plugin/: CMakeLists.txt  gst_nmos_audio_receiver_plugin.cpp  utils.cpp  utils.h
cpp/libs/gst_nmos_plugins/: CMakeLists.txt  README.md
cpp/libs/gst_nmos_plugins/include/: element_class.h  element_class.hpp  nmos_configuration.hpp
cpp/libs/gst_nmos_plugins/src/: gst_nmos_audio_receiver_plugin.cpp  gst_nmos_sender_plugin.cpp  gst_nmos_video_receiver_plugin.cpp  utils.cpp  utils.h  utils.hpp
cpp/libs/gst_nmos_receiver_plugin/: CMakeLists.txt  gst_nmos_receiver_plugin.cpp  utils.h
cpp/libs/gst_nmos_sender_plugin/: CMakeLists.txt  gst_nmos_sender_plugin.c  gst_nmos_sender_plugin.cpp  utils.cpp  utils.h
cpp/libs/gst_nmos_video_receiver_plugin/: CMakeLists.txt  gst_nmos_video_receiver_plugin.cpp  utils.cpp  utils.h
cpp/libs/ossrf_c_nmos_api/: CMakeLists.txt  ossrf_c_nmos_api.cpp  ossrf_c_nmos_api.h
cpp/libs/ossrf_gstreamer_api/lib/: CMakeLists.txt
cpp/libs/ossrf_gstreamer_api/lib/include/ossrf/gstreamer/api/receiver/: receiver_configuration.h  receiver_plugin.h
cpp/libs/ossrf_gstreamer_api/lib/include/ossrf/gstreamer/api/sender/: sender_configuration.h  sender_plugin.h
cpp/libs/ossrf_gstreamer_api/lib/src/receiver/: receiver_plugin.cpp  st2110_20_receiver_plugin.cpp  st2110_20_receiver_plugin.h  st2110_30_receiver_plugin.cpp  st2110_30_receiver_plugin.h
cpp/libs/ossrf_gstreamer_api/lib/src/sender/: sender_plugin.cpp  st2110_20_sender_plugin.cpp  st2110_20_sender_plugin.h  st2110_30_sender_plugin.cpp  st2110_30_sender_plugin.h
cpp/libs/ossrf_nmos_api/lib/: CMakeLists.txt
cpp/libs/ossrf_nmos_api/lib/include/ossrf/nmos/api/: nmos.h  nmos_client.h  nmos_impl.h
cpp/libs/ossrf_nmos_api/lib/src/: nmos_client.cpp  nmos_impl.cpp  utils.h
cpp/libs/ossrf_nmos_api/lib/src/context/: context.cpp  context.h  nmos_event_handler.cpp  nmos_event_handler.h  resource_map.cpp  resource_map.h
cpp/libs/ossrf_nmos_api/lib/src/resources/: nmos_resource.h  nmos_resource_receiver.cpp  nmos_resource_receiver.h  nmos_resource_sender.cpp  nmos_resource_sender.h
cpp/libs/ossrf_nmos_api/lib/src/serialization/: device.cpp  device.h  media_types.h  meta.cpp  meta.h  network.cpp  network.h  receiver.cpp  receiver.h  sender.cpp  sender.h  video.cpp  video.h
docs/: Overview.md  Style Guide.md
images/: build.sh  docker-compose-x86-development.yml  run-dev.sh
images/dev/: Dockerfile
images/scripts/: launch.sh
images/scripts/build-tools/: add-user-bisect.sh  add-user-nmos.sh  install-cmake-x86.sh  install-conan.sh  install-fish.sh  install-git.sh
images/scripts/common/: add-ssh-server.sh  env.sh
scripts/: build-inside-container.sh  build.sh  common.sh  dist-clean.sh  dist.sh  install_custom_gstreamer_plugins.sh  pack.sh  setup.sh
scripts/cipipeline/: clang-test.sh
scripts/copyright/: copyright.txt  copyright_check.sh
